fix: improve styling for dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,13 +33,13 @@ h2 small {
  
 }
 .responsive-table .table-header {
-  background-color: #95a5a6;
+ 
   font-size:14px;
   text-transform: uppercase;
   letter-spacing: 0.03em;
 }
 .responsive-table .table-row {
-  background-color: #ffffff;
+
   box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.2);
 }
 .responsive-table .col-1 {
